# cowbook

./: .dockerignore  .gitignore  _package_bootstrap.py  config.json  config_loader.py  csv_converter.py  directory_manager.py  frame_processor.py  group_processor.py  group_videos.sh  json_merger.py  main.py  mkdocs.yml  preprocess_video.py  processing.py  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  tracking.py  video_generator.py  video_processor.py
configs/: full.cpu.json  full.gpu.json  smoke.gpu.json  smoke.json
docker/: Dockerfile  Dockerfile.a40-bench  Dockerfile.a40-cleanup  Dockerfile.backend-bench  Dockerfile.deva-base  Dockerfile.deva-bench  Dockerfile.deva-yolo-bench  Dockerfile.sam3-bench  Dockerfile.sam3-export-bench  Dockerfile.sam3-project-bench  Dockerfile.sam3-raw-bench  Dockerfile.tensorrt-bench  Dockerfile.undistort-bench
docs/: architecture.md  calibration.md  cli.md  configuration.md  getting-started.md  index.md  job-execution.md  package-boundaries.md  pipeline.md  python-usage.md  references.md  runtime-artifacts.md  utilities.md
legacy/: calibration_matrix.json  image_utils.py  points_data.py  real_worls_points.json
models/: yolov11_best.pt  yolov8_best.pt
scripts/: group_videos.sh
tests/: conftest.py  test_benchmark_deva_text_tracking.py  test_benchmark_deva_yolo_tracking.py  test_benchmark_runtime_tracking_concurrency.py  test_benchmark_sam3_export.py  test_benchmark_sam3_raw.py  test_benchmark_sam3_semantic_tracking.py  test_benchmark_tensorrt_concurrency.py  test_benchmark_tracking_backends.py  (+35 more)
(+81 files in other folders)
